[project]
name = "comfyui-myapi"
description = "ComfyUI 多模态 AI 节点集合：豆包、DeepSeek、BizyAir、AutoDL 等服务一站式接入。"
version = "2.0.0"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
    "openai",
    "google-genai",
    "requests",
    "Pillow",
    "numpy",
]

[project.urls]
Repository = "https://github.com/zealman2025/Comfyui-MyApi"

[tool.comfy]
PublisherId = "zealman2025"
DisplayName = "ComfyUI MyAPI"
Icon = ""
